--- a/style.css
+++ b/style.css
@@ -139,14 +139,24 @@ a[title~="Repository"]::after {
 	content: "Negative Tweets";
 }
 
+#fake-margin {
+	height: 8em;
+}
+
 #footnote {
 	position: fixed;
-	bottom: 0.3em;
+	bottom: 1em;
 	right: 1em;
+	margin-left: 1em;
 	min-width: 30%;
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-around;
+	background-color: #222831;
+	filter: brightness(0.8);
+	padding: 0.3em;
+	border-radius: 10px;
+	opacity: 0.9;
 }
 #footnote > span {
 	margin: 0 1.5em;
