--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
 	text-align: center;
 	margin: 0.2em 0 0;
 	padding: 0;
-	border-bottom: none;
+	border-bottom: none !important;
 }
 
 h1:hover {
