Big time progress on 11ty transition

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "Soria";
-	src: url("Soria-Bold.otf") format("opentype");
+  src: url("/projects/David-O-Meter/Soria-Bold.otf") format("opentype");
 }
 
 :root {
