--- a/style.scss
+++ b/style.scss
@@ -1,172 +1,189 @@
 @font-face {
-	font-family: "Soria";
+  font-family: "Soria";
   src: url("/projects/David-O-Meter/Soria-Bold.otf") format("opentype");
 }
 
 :root {
-	--container-height: 3em;
+  --container-height: 3em;
 }
 
 main {
-	position: absolute;
-	width: 100%;
-	left: 0;
+  position: absolute;
+  width: 100%;
+  left: 0;
 }
 
 .nav {
-	display: block;
+  display: block;
 }
+
 .nav p {
-	margin-top: 1em;
+  margin-top: 1em;
+}
+
+.light-theme {
+  --shadow: lightblue;
+}
+
+.dark-theme {
+  --shadow: black;
 }
 
 h1 {
-	font-family: "Soria", Arial, Helvetica, sans-serif;
-	font-size: clamp(5em, 12vw, 15em);
-	text-shadow: clamp(0.2rem, 0.08em, 18rem) clamp(0.2rem, 0.08em, 18rem)
-		rgb(0, 0, 0);
-	text-align: center;
-	margin: 0.2em 0 0;
-	padding: 0;
-	border-bottom: none !important;
+  font-family: "Soria", Arial, Helvetica, sans-serif;
+  font-size: clamp(5em, 12vw, 15em);
+  text-shadow: clamp(0.2rem, 0.05em, 16rem) clamp(0.2rem, 0.05em, 16rem) var(--shadow);
+  text-align: center;
+  margin: 0.2em 0 0;
+  padding: 0;
+  border-bottom: none !important;
 }
 
 h1:hover {
-	/* font-size: 12.5vw; */
-	filter: brightness(0.9) saturate(3);
-	/* filter: hue-rotate(180deg); */
+  /* font-size: 12.5vw; */
+  filter: brightness(0.9) saturate(3);
+  /* filter: hue-rotate(180deg); */
 }
 
 span#big-O {
-	font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 a[title~="Repository"] {
-	border: none;
+  border: none;
 }
 
 a[title~="Repository"]:hover::after {
-	opacity: 0;
+  opacity: 0;
 }
 
 a[title~="Repository"]::after {
-	content: "";
-	display: inline-block;
-	background-color: #d7f3f7;
-	width: 85vw;
-	height: 5px;
-	border: none;
-	position: relative;
-	left: 7.5vw;
-	margin: 1em 0 4em;
+  content: "";
+  display: inline-block;
+  background-color: var(--link-underline);
+  width: 85vw;
+  height: 5px;
+  border: none;
+  position: relative;
+  left: 7.5vw;
+  margin: 1em 0 4em;
 }
 
 #contain-checkbox-container {
-	width: 50%;
-	margin: 1em auto;
+  width: 50%;
+  margin: 1em auto;
 }
+
 #contain-checkbox {
-	width: fit-content;
-	margin: 1em auto;
-	color: white;
-	text-align: center;
-	vertical-align: middle;
-	font-size: 1.3rem;
-	border-radius: 2px;
-	filter: saturate(3);
-	font-weight: 500;
+  width: fit-content;
+  margin: 1em auto;
+  //color: white;
+  //color: var(--primary-text);
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1.3rem;
+  border-radius: 2px;
+  filter: saturate(3);
+  font-weight: 500;
 }
+
 #contain-checkbox label {
-	position: relative;
-	top: -0.2em;
+  position: relative;
+  top: -0.2em;
 }
 
 #container {
-	width: 82%;
-	height: var(--container-height);
-	display: flex;
-	flex-direction: row-reverse;
-	border: solid 2px #1664a2;
-	margin: 0 auto 4em;
-	border-radius: 25px;
+  width: 82%;
+  height: var(--container-height);
+  display: flex;
+  flex-direction: row-reverse;
+  border: solid 2px #1664a2;
+  margin: 0 auto 4em;
+  border-radius: 25px;
 }
 
 #container > div {
-	margin: 2px;
-	text-align: center;
-	position: relative;
-	/* vertical alignment */
-	line-height: calc(var(--container-height) - 50%);
-	color: black;
+  margin: 2px;
+  text-align: center;
+  position: relative;
+  line-height: calc(var(--container-height) - 50%);
+  color: black;
 }
+
 #container > div:hover {
-	font-weight: bold;
-	cursor: pointer;
-	filter: saturate(2);
+  font-weight: bold;
+  cursor: pointer;
+  filter: saturate(2);
 }
+
 #container > div::after {
-	color: white;
-	position: absolute;
-	top: calc((var(--container-height) - 50%) * 2);
-	line-height: 1.6;
+  color: var(--primary-text);
+  position: absolute;
+  top: calc((var(--container-height) - 50%) * 2);
+  line-height: 1.6;
 }
 
 #positive {
-	background-color: #37ff14d0;
-	flex-grow: 1;
-	border-radius: 0 20px 20px 0;
+  background-color: #37ff14d0;
+  flex-grow: 1;
+  border-radius: 0 20px 20px 0;
 }
+
 #positive::after {
-	content: "Positive Tweets";
+  content: "Positive Tweets";
 }
 
 #neutral {
-	background-color: #fff01fd0;
-	flex-grow: 1;
-	/* display: none; */
+  background-color: #fff01fd0;
+  flex-grow: 1;
+  /* display: none; */
 }
+
 #neutral::after {
-	content: "Neutral Tweets";
+  content: "Neutral Tweets";
 }
 
 #negative {
-	background-color: #f72019d0;
-	flex-grow: 1;
-	border-radius: 20px 0 0 20px;
+  background-color: #f72019d0;
+  flex-grow: 1;
+  border-radius: 20px 0 0 20px;
 }
+
 #negative::after {
-	content: "Negative Tweets";
+  content: "Negative Tweets";
 }
 
 a#learn-more {
-	color: #b6f1ff;
-	font-size: 1.15rem;
-	font-weight: 500;
-	display: block;
-	width: fit-content;
-	margin: 10px auto;
-	padding: 15px 0 0;
+  //color: #b6f1ff;
+  font-size: 1.15rem;
+  font-weight: 500;
+  display: block;
+  width: fit-content;
+  margin: 10px auto;
+  padding: 15px 0 0;
 }
 
 #fake-margin {
-	height: 8em;
+  height: 8em;
 }
 
 #footnote {
-	position: fixed;
-	bottom: 1em;
-	right: 1em;
-	margin-left: 1em;
-	min-width: 30%;
-	display: flex;
-	flex-direction: row-reverse;
-	justify-content: space-around;
-	background-color: #222831;
-	filter: brightness(0.8);
-	padding: 0.3em;
-	border-radius: 10px;
-	opacity: 0.9;
+  position: fixed;
+  bottom: 1em;
+  right: 1em;
+  margin-left: 1em;
+  min-width: 30%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  background-color: var(--footer-background);
+  color: var(--footer-text);
+  filter: brightness(0.8);
+  padding: 0.3em;
+  border-radius: 10px;
+  opacity: 0.9;
 }
+
 #footnote > span {
-	margin: 0 1.5em;
+  margin: 0 1.5em;
 }
